# Backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  ecr.yml  main.yml
backend/: .env.example  Dockerfile  requirements.txt
backend/ba7besh/: apps.py  models.py  serializers.py  urls.py  views.py
backend/ba7besh/migrations/: 0001_initial.py  0002_remove_business_restaurant_remove_business_user_and_more.py  0003_remove_review_restaurant_remove_review_user_and_more.py  0004_category_featurescategory_and_more.py
backend/backend/: settings.py  urls.py
backend/backend/users/: adapter.py
core/entities/: business.py
core/entities/business/: queries.py
core/interfaces/repositories/: business_repository.py
core/services/: business_service.py
tests/: test_sample.py
