[tool.poetry]
name = "ba7besh"
version = "0.1.0"
description = ""
authors = ["Hamza Rabah <h.rabah@outlook.com>"]
readme = "README.md"

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"
in-place = true
recursive = true
aggressive = 3

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
django-enumfields = "^2.1.1"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
uritemplate = "^4.1.1"
djangorestframework-gis = "^1.0"
django-environ = "^0.11.2"
django-allauth = "^0.58.2"
drf-spectacular = "^0.26.5"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.7.0"
autopep8 = "^2.0.4"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
